--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 /node_modules
 /.pnp
 .pnp.js
+worker/node_modules
+client/node_modules
+server/node_modules
 */node_modules
+
 
 # testing
 /coverage
